--- a/Shop/assets/css/responsive.css
+++ b/Shop/assets/css/responsive.css
@@ -1,9 +1,6 @@
 /* mobile and tablet */
 @media (max-width: 1023px) {
-    :root {
-        --header-height:68px;
-        --navbar-height:0px;
-    }
+
     .hide-on-mobile-tablet{
         display: none;
     }
@@ -27,10 +24,32 @@
     .app__container {
         margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
     }
+
+    .app__content{
+        padding-top: 8px;
+    }
+    .mobile-category__list{
+        display: flex;
+    }
+    .header__sort-bar{
+        display: flex;
+    }
+    .header__bars{
+        display: block;
+    }
 }
 
 /* Tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
+    
+    :root {
+        --header-height:68px;
+        --navbar-height:0px;
+    }
+
+    .header__bars{
+        margin-right: 50px;
+    }
 
     .header__cart {
         width: 80px;
@@ -39,13 +58,21 @@
     .hide-on-tablet{
         display: none;
     }
-    .header__sort-bar{
-        display: flex;
+    .header__menu{
+        top: var(--header-height);
+    }
+    .menu__overlay{
+        top: var(--header-height);
     }
 }
 
 /* Mobile */
 @media (max-width: 739px) {
+
+    :root {
+        --header-height: 54px;
+        --navbar-height: 0px;
+    }
     .hide-on-mobile{
         display: none;
     }
@@ -71,6 +98,17 @@
         display: none;
     }
 
+    @keyframes mobileSearchSideIn {
+        from{
+            opacity: 0;
+            top: calc(var(--header-height) / 2);
+        }
+        to{
+            opacity: 1;
+            top: var(--header-height);
+        }
+    } 
+
     .header__search-history{
         position: fixed;
         width: 100%;
@@ -81,6 +119,7 @@
 
     .app__content{
         margin: 0 4px;
+        padding-top: 8px;
     }
 
     .pagination-item{
@@ -92,15 +131,39 @@
         font-size: 1.6rem;
         min-width: 30px;
     }
+    .header__mobile-search{
+        display: block;
+    }
 
-    @keyframes mobileSearchSideIn {
-        from{
-            opacity: 0;
-            top: calc(var(--header-height) / 2);
-        }
-        to{
-            opacity: 1;
-            top: var(--header-height);
-        }
+    .header__logo-img{
+        width: 110px;
+    }
+
+    .footer__content{
+        padding: 0 16px;
+    }
+    .footer__heading{
+        text-align: center;
+    }
+    .footer__dowload,
+    .footer-item__link{
+        justify-content: center;
+    }
+    .footer__dowload-apps{
+        flex: unset;
+    }
+    .footer__dowload-apps-link{
+        display: block;
+        padding: 6px 8px;
+    }
+    .header__menu{
+        top: var(--header-height);
+        width: 240px;
+    }
+    .menu__overlay{
+        top: var(--header-height);
+    }
+    .header__logo-link{
+        padding-right: 45px;
     }
 }
